--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>
         <img src="1.jpg" width="100%">
         <p>
-                <h3>Structure of Semantic and Acoustic Tokens Synthesizer.</h3>
+                <h3>Structure of Semantic and Acoustic Tokens Synthesizers.</h3>
         <p>
         <img src="2.jpg" width="80%" >
                 <p>
